workloads/ingress/auth/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: auth
spec:
  rules:
    - host: api.dev.growbin.app
      http:
        paths:
          - path: /api/v1/auth/*
            pathType: Prefix
            backend:
              service:
                name: auth-api
                port:
                  number: 8000
